<resources>
    <string name="app_name">SoftwareInquilinosJava</string>
    <string name="titulo_bienvenido_login">Bienvenido</string>
    <string name="saludo_login">
        Saludos y bienvenido de nuevo a nuestra plataforma.
        <font fgcolor="#3F13E4">¡Adelante y comienza tu sesión!</font>
    </string>
    <string name="usuario_login">Usuario</string>
    <string name="ejemplo_correo_login">ejemplo@makaopid.com</string>
    <string name="contraseña_login">Contraseña</string>
    <string name="ejemplo_contraseña_login">************</string>
    <string name="olvidaste_contrasena"><u>Olvidaste tu contraseña?</u></string>
    <string name="texto_advertencia">Ten presente que este aplicativo cuenta con un
        <font fgcolor="#3F13E4"> acceso restringido, </font>reservado exclusivamente para inquilinos autorizados.
    </string>
    <string name="ingresar_login">Ingresar</string>
    <string name="titulo_recuperar_contrase">¿Olvidaste la contraseña?</string>
    <string name="descripcionRecuperarContraseña">Para restablecer tu contraseña, es necesario contar con tu dirección
        de <font fgcolor="#3F13E4">correo electrónico</font> o número de <font fgcolor="#3F13E4">teléfono </font> que pueda ser
        verificado de manera segura.</string>
    <string name="btn1RC">Solicitar Contraseña</string>
    <string name="btn2RC">Regresar</string>
    <string name="saludo_main">Hola,</string>
    <string name="habitacion_sin_carga">MAK-000</string>
    <string name="user_carga">User</string>
    <string name="fecha_sin_carga">\ 00 de enero del 0000</string>
    <string name="dni_sin_carga">000000000</string>
    <string name="notificaciones_sin_carga">0</string>
    <string name="img_descripcion_notificacion">Notificaciones</string>
    <string name="img_descripcion_fondo">Fondo</string>
    <string name="descripcion_img_user">Usuario</string>
    <string name="texto_previo_fecha_de_registro">Ingresaste el</string>
    <string name="deudas">Deudas</string>
    <string name="resumen">Resumen</string>
    <string name="mensajes">Mensajes</string>
    <string name="titulo_deudas">Próximos Pagos</string>
    <string name="titulo_mensualidad_rcv">Mensualidad\ </string>
    <string name="Mes_sin_carga">Mes 0000</string>
    <string name="fecha_deudas__sin_carga">Se vence el 00/00/00</string>
    <string name="dinero_sin_carga">S/. 000.00</string>
    <string name="nuevos_soles">\ Soles</string>
    <string name="pagar">Pagar</string>
    <string name="Dias_restantes">Quedan x días</string>
    <string name="monto">Monto a Pagar</string>

    <string name="Api_Maps">API MAPS</string>
    <string name="title_activity_mapa">Mapa</string>

    <string name="default_notification_channel_id">CHANEL ID</string>
</resources>