<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@drawable/background_linear_cardview"

        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.22" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_oval_rcv_deudas"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgDepartamento"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_bed_rcv_deudas"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/dmsans_18pt_bold"
                android:text="@string/titulo_mensualidad_rcv"
                android:textAllCaps="true"
                android:textColor="@color/color_letras"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout2" />

            <TextView
                android:id="@+id/txtDetapartamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-4.5dp"
                android:fontFamily="@font/dmsans_18pt_bold"
                android:text="@string/Mes_sin_carga"
                android:textAllCaps="true"
                android:textColor="@color/color_letras"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
                tools:text="Diciembre 2023" />

            <TextView
                android:id="@+id/txtFechaPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/dmsans_18pt_regular"
                android:text="@string/fecha_deudas__sin_carga"
                android:textColor="@color/hint"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/txtMonto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/dmsans_18pt_bold"
                android:text="@string/dinero_sin_carga"
                android:textColor="#3F13E4"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnPagar"
                app:layout_constraintStart_toStartOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_18pt_bold"
                android:text="@string/monto"
                android:textColor="#3F13E4"
                android:textSize="11.5sp"
                app:layout_constraintBottom_toTopOf="@+id/txtMonto"
                app:layout_constraintStart_toStartOf="@+id/textView10" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPagar"
                android:layout_width="115dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_button_rcv_deudas_pagar"
                android:fontFamily="@font/dmsans_18pt_medium"
                android:text="@string/pagar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtFechaPago" />

            <TextView
                android:id="@+id/txtFechaMensualidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/dmsans_18pt_regular"
                android:text="@string/Dias_restantes"
                android:textAlignment="center"
                android:textColor="@color/quedanDias"
                android:textSize="11.5sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                tools:text="Quedan 10 \ndías" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <View
        android:layout_width="10dp"
        android:layout_height="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>