<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_main"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="268dp"
                android:contentDescription="@string/img_descripcion_fondo"
                android:scaleType="fitXY"
                android:src="@drawable/img_background_main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="55dp"
                android:background="@drawable/background_oval"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgUserMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/descripcion_img_user"
                    android:padding="8dp"
                    android:src="@drawable/img_user_desconocido"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvDepartamentoMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/dmsans_18pt_bold"
                android:text="@string/habitacion_sin_carga"
                android:textColor="@color/white"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


            <ImageView
                android:id="@+id/imgLogout"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="12dp"

                android:src="@drawable/ic_logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/dmsans_18pt_light"
                android:text="Cerrar\nSesión"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLogout" />


            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/dmsans_18pt_light"
                android:text="@string/saludo_main"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tvDepartamentoMain"
                app:layout_constraintTop_toBottomOf="@+id/tvDepartamentoMain" />

            <TextView
                android:id="@+id/tvNombreUserMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dmsans_18pt_bold"
                android:text="@string/user_carga"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textView16"
                app:layout_constraintTop_toTopOf="@+id/textView16" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/dmsans_18pt_regular"
                android:text="DNI"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvDepartamentoMain" />

            <TextView
                android:id="@+id/tvDniUserMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_18pt_bold"
                android:text="@string/dni_sin_carga"
                android:textColor="@color/white"

                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/dmsans_18pt_light"
                android:text="@string/texto_previo_fecha_de_registro"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/tvFechaIngresoMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_18pt_light"
                android:text="@string/fecha_sin_carga"
                android:textColor="@color/white"

                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textView17"
                app:layout_constraintTop_toTopOf="@+id/textView17" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/background_edt_navegacion_main"
                android:elevation="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3333" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.6666" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/acbuttonDeudasMain"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_navegacion_seleccionado_main"
                    android:elevation="4dp"
                    android:fontFamily="@font/dmsans_18pt_bold"
                    android:soundEffectsEnabled="true"
                    android:text="@string/deudas"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/acButtonResumenMain"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_navegacion_no_seleccionado_main"
                    android:elevation="4dp"
                    android:fontFamily="@font/dmsans_18pt_bold"
                    android:soundEffectsEnabled="true"
                    android:text="@string/resumen"
                    android:textAllCaps="false"
                    android:textColor="@color/morado_oscuro"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    app:layout_constraintStart_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/acButtonMensajesMain"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_navegacion_no_seleccionado_main"
                    android:elevation="4dp"
                    android:fontFamily="@font/dmsans_18pt_bold"
                    android:soundEffectsEnabled="true"
                    android:text="@string/mensajes"
                    android:textAllCaps="false"
                    android:textColor="@color/morado_oscuro"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvTituloRcv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/dmsans_18pt_bold"
                android:text="@string/titulo_deudas"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvDeudas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="20dp"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvResumen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="20dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvMensajes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="20dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imgProximamente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:src="@drawable/img_proximamente"
            android:visibility="gone"

            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>